@@ -3,11 +3,12 @@ package io.inblocks.civicpower.cryptopolitics.models.cards;
 import io.inblocks.civicpower.cryptopolitics.exceptions.CardClassEmpty;
 import io.inblocks.civicpower.cryptopolitics.exceptions.NoSuchCardClass;
 import io.inblocks.civicpower.cryptopolitics.models.SelectionResult;
+import io.inblocks.civicpower.cryptopolitics.models.SerieRetirement;
+import io.inblocks.civicpower.cryptopolitics.models.SeriesRetirementsByClass;
 import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -24,13 +25,13 @@ class TalonTest {
     Talon talon =
         Talon.builder()
             .classes(
-                Collections.singletonList(
+                List.of(
                     CardClass.builder()
                         .cardClass(COMMON_CLASS)
                         .isInfinite(false)
                         .series(
-                            Collections.singletonList(
-                                new CardSerie("test", 1).pickCard().remainingCards))
+                            List.of(
+                                new CardSerie("test", 1, false).pickCard().remainingCards))
                         .build()))
             .build();
     long seed = r.nextLong();
@@ -43,11 +44,11 @@ class TalonTest {
     Talon talon =
         Talon.builder()
             .classes(
-                Collections.singletonList(
+                List.of(
                     CardClass.builder()
                         .cardClass(COMMON_CLASS)
                         .isInfinite(false)
-                        .series(Collections.singletonList(new CardSerie("test", 1)))
+                        .series(List.of(new CardSerie("test", 1, false)))
                         .build()))
             .build();
     SelectionResult pick = talon.pickCardByClass(COMMON_CLASS, r.nextLong());
@@ -59,13 +60,13 @@ class TalonTest {
     Talon talon =
         Talon.builder()
             .classes(
-                Collections.singletonList(
+                List.of(
                     CardClass.builder()
                         .cardClass(COMMON_CLASS)
                         .isInfinite(false)
                         .series(
-                            Collections.singletonList(
-                                new CardSerie("test", 1).pickCard().remainingCards))
+                            List.of(
+                                new CardSerie("test", 1, false).pickCard().remainingCards))
                         .build()))
             .build();
     Talon restoredTalon = talon.addCard(new Card(COMMON_CLASS, "test", 1));
@@ -80,15 +81,61 @@ class TalonTest {
     Talon talon =
         Talon.builder()
             .classes(
-                Collections.singletonList(
+                List.of(
                     CardClass.builder()
                         .cardClass(COMMON_CLASS)
                         .isInfinite(false)
-                        .series(Collections.singletonList(new CardSerie("test", 1)))
+                        .series(List.of(new CardSerie("test", 1, false)))
                         .build()))
             .build();
     long seed = r.nextLong();
     Assertions.assertThrows(
         NoSuchCardClass.class, () -> talon.pickCardByClass(EPIC_CLASS, seed));
+  }
+
+  @Test
+  void retireSeries() {
+    final CardSerie serieOne = new CardSerie("one", 1, false);
+    final CardSerie serieTwo = new CardSerie("two", 1, false);
+    final CardSerie serieThree = new CardSerie("three", 1, false);
+    final CardSerie serieFour = new CardSerie("four", 1, false);
+    final Talon talon = Talon.builder()
+            .classes(List.of(
+                    CardClass.builder()
+                            .cardClass(COMMON_CLASS)
+                            .isInfinite(false)
+                            .series(List.of(serieOne, serieTwo))
+                            .build(),
+                    CardClass.builder()
+                            .cardClass(EPIC_CLASS)
+                            .isInfinite(false)
+                            .series(List.of(serieThree, serieFour))
+                            .build()
+            ))
+            .build();
+    final Talon newTalon = talon.retireSeries(List.of(
+            new SeriesRetirementsByClass(COMMON_CLASS, List.of(new SerieRetirement("two", true))),
+            new SeriesRetirementsByClass(EPIC_CLASS, List.of(new SerieRetirement("three", true)))));
+    final CardClass newCommonClass = newTalon.getCardClassByName(COMMON_CLASS);
+    Assertions.assertFalse(newCommonClass.getCardSerieByName("one").isRetired);
+    Assertions.assertTrue(newCommonClass.getCardSerieByName("two").isRetired);
+    final CardClass newEpicClass = newTalon.getCardClassByName(EPIC_CLASS);
+    Assertions.assertFalse(newEpicClass.getCardSerieByName("four").isRetired);
+    Assertions.assertTrue(newEpicClass.getCardSerieByName("three").isRetired);
+  }
+
+  @Test
+  void retireSerieFromUnexistingClass() {
+    final CardSerie serieOne = new CardSerie("one", 1, false);
+    final Talon talon = Talon.builder()
+            .classes(List.of(
+                    CardClass.builder()
+                            .cardClass(COMMON_CLASS)
+                            .isInfinite(false)
+                            .series(List.of(serieOne))
+                            .build()
+            ))
+            .build();
+    Assertions.assertThrows(NoSuchCardClass.class, () -> talon.retireSeries(List.of(new SeriesRetirementsByClass("FREE", List.of(new SerieRetirement("one", true))))));
   }
 }
